Bring IA64 in sync with the current code base.

--- a/lib/clang/libllvmia64desc/Makefile
+++ b/lib/clang/libllvmia64desc/Makefile
@@ -6,6 +6,8 @@ SRCDIR=	lib/Target/IA64/MCTargetDesc
 SRCS=	IA64MCAsmInfo.cpp \
 	IA64MCTargetDesc.cpp
 
+CFLAGS+= -I${LLVM_SRCS}/${SRCDIR}/..
+
 TGHDRS=	IA64GenInstrInfo \
 	IA64GenRegisterInfo \
 	IA64GenSubtargetInfo
