--- a/lib/libc/arm/Makefile.inc
+++ b/lib/libc/arm/Makefile.inc
@@ -8,3 +8,6 @@ SOFTFLOAT_BITS=32
 # Long double is just double precision.
 MDSRCS+=machdep_ldisd.c
 SYM_MAPS+=${.CURDIR}/arm/Symbol.map
+
+# This contains the symbols that were removed when moving to the ARM EABI
+#SYM_MAPS+=${.CURDIR}/arm/Symbol_oabi.map
