--- a/lib/libc/arm/gen/Makefile.inc
+++ b/lib/libc/arm/gen/Makefile.inc
@@ -3,4 +3,7 @@
 
 SRCS+=	_ctx_start.S _setjmp.S _set_tp.c alloca.S fabs.c \
 	infinity.c ldexp.c makecontext.c \
-	setjmp.S signalcontext.c sigsetjmp.S divsi3.S
+	setjmp.S signalcontext.c sigsetjmp.S
+
+#SRCS+=	divsi3.S
+
