--- a/sys/boot/fdt/dts/beaglebone.dts
+++ b/sys/boot/fdt/dts/beaglebone.dts
@@ -103,7 +103,6 @@
 				  0x4804A000 0x1000 >;
 			interrupts = < 66 67 68 69 92 93 94 95 >;
 			interrupt-parent = <&AINTC>;
-			clock-frequency = < 24000000 >;
 		};
 
 		uart0: serial@44E09000 {
@@ -131,6 +130,30 @@
 					reg = <0x0>;
 				};
 			};
+		};
+
+		i2c0: i2c@44e0b000 {
+			compatible = "ti,i2c";
+			reg =<	0x44e0b000 0x1000 >;
+			interrupts = <70>;
+			interrupt-parent = <&AINTC>;
+			i2c-device-id = <0>;
+		};
+
+		i2c1: i2c@4802a000 {
+			compatible = "ti,i2c";
+			reg =<	0x4802a000 0x1000 >;
+			interrupts = <71>;
+			interrupt-parent = <&AINTC>;
+			i2c-device-id = <1>;
+		};
+
+		i2c2: i2c@4819c000 {
+			compatible = "ti,i2c";
+			reg =<	0x4819c000 0x1000 >;
+			interrupts = <30>;
+			interrupt-parent = <&AINTC>;
+			i2c-device-id = <2>;
 		};
 	};
 
