--- a/include/Makefile
+++ b/include/Makefile
@@ -13,8 +13,8 @@ INCS=	a.out.h ar.h assert.h bitstring.h complex.h cpio.h _ctype.h ctype.h \
 	fstab.h fts.h ftw.h getopt.h glob.h grp.h gssapi.h \
 	ieeefp.h ifaddrs.h \
 	inttypes.h iso646.h kenv.h langinfo.h libgen.h limits.h link.h \
-	locale.h malloc.h malloc_np.h memory.h monetary.h mpool.h mqueue.h \
-	ndbm.h netconfig.h \
+	locale.h malloc.h malloc_np.h memory.h monetary.h mpool.h mregex.h \
+	mqueue.h ndbm.h netconfig.h \
 	netdb.h nl_types.h nlist.h nss.h nsswitch.h paths.h \
 	printf.h proc_service.h pthread.h \
 	pthread_np.h pwd.h ranlib.h readpassphrase.h regex.h \
